--- a/resume.html
+++ b/resume.html
@@ -35,21 +35,7 @@
 
     <h2>Professional Experiences</h2>
 
-    <h3>Subject Matter Expert / Online Instructor</h3>
-    <h4>Coursera, Mountain View, CA</h4>
-    <h5>March 2020 - Present</h5>
-      <ul>
-        <li>Create interactive online IT courses</li>
-        <li>Teach students worldwide</li>
-      </ul>
-
-    <h3>Founder, Software Engineer</h3>
-    <h4>skyRoute66, Los Angeles, CA</h4>
-    <h5>January 2019 - Present</h5>
-      <ul>
-        <li>Author and publish mobile apps, reusable iOS UI modules</li>
-        <li>Independent computer service contractor</li>
-      </ul>
+    <h3>Im new into this field</h3>
   </body>
 
   <footer>
