--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>About me</h2>
     <p>I am a mechanical engineer</p>
     <p>I am studying in St francis institute of technology</p>
-    <p>I had recently enrolled myself to the course of making a website for beginers</p>
+    <p>I had recently enrolled myself to the course of making a website for beginners</p>
     <h2>Credentials and Portfolio</h2>
 
     <p><a href = "resume.html">My Resume</a> |<a href = "https://github.com/vineeth1075"> My GitHub</a></p>
