--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h2>Credentials and Portfolio</h2>
 
     <p><a href = "resume.html">My Resume</a> |<a href = "https://github.com/vineeth1075"> My GitHub</a></p>
+    <p><a href="achivements.html">My Achivements</a></p>
     <h2>Contact</h2>
 
     <p>Email: <a href = "mailto:vineethputhran1@gmail.com">vineethputhran1@gmail.com</a></p>
