--- a/a1.html
+++ b/a1.html
@@ -12,6 +12,7 @@
 
   <body>
     <hr>
+    text-align: left;
     <img src="images/St. francis Insitute of Technology-10_page-0001.jpg" alt="Achivements" width="20%">
     <p>I was a part of the robotics team of our college known as Team RAW werein we have particpated in an internation event known as ROBOCON and we stood AIR 20 in ROBOCON 2021</p>
   </body>
