--- a/resume.html
+++ b/resume.html
@@ -12,6 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="name" content="Vineeth Puthran's Portal">
     <meta name="robots" content="noindex, nofoollow">
+
+
+
+
+
   </header>
 
   <body>
@@ -21,12 +26,13 @@
 
     <h1>Vineeth Puthran</h1>
     <h4>Mechanical Engineering student</h4>
-
+    <h2>Contact me on</h2>
     <p>Email: <a href="mailto:vineethputhran1@gmail.com" target="_blank">Vineethputhran1@gmail.com</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
+    <p>Linkedin:<a href="https://www.linkedin.com/in/vineeth-puthran-a874a81aa/" target=_"blank">Vineeth Puthran</a></p>
 
     <h2>Portfolio</h2>
-      <h3>GitHub: <a href="https://github.com/vineeth1075" target="_blank">https://github.com/vineeth1075</a></h3>
+      <h3>GitHub: <a href="https://github.com/vineeth1075" target="_blank">GITHUB</a></h3>
 
     <h2>Education</h2>
 
